
# SET(CMAKE_CXX_COMPILER g++)
# SET (CMAKE_CXX_FLAGS_DEBUG "-g -Wall")
# SET (CMAKE_BUILD_TYPE DEBUG)
ADD_DEFINITIONS(-DIODRVBOARD_EXPORTS)

AUX_SOURCE_DIRECTORY(. DIR_IODRVBOARD_SRCS)

MESSAGE(STATUS "IODrvBoard source file: ${DIR_IODRVBOARD_SRCS}")

#保存位置
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)

ADD_LIBRARY(IODrvBoard SHARED ${DIR_IODRVBOARD_SRCS})

TARGET_LINK_LIBRARIES(IODrvBoard 
                        ACE
						RTDBCommon
						RTDBBaseClasses
                        )

