
# SET(CMAKE_CXX_COMPILER g++)
# SET (CMAKE_CXX_FLAGS_DEBUG "-g -Wall")
# SET (CMAKE_BUILD_TYPE DEBUG)
ADD_DEFINITIONS(-DIOHELPCFGMANAGER_EXPORTS)

AUX_SOURCE_DIRECTORY(. DIR_IOHELPCFGMANAGER_SRCS)

MESSAGE(STATUS "IOHelpCfgManager source file: ${DIR_IOHELPCFGMANAGER_SRCS}")

#保存位置
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)

ADD_LIBRARY(IOHelpCfgManager SHARED ${DIR_IOHELPCFGMANAGER_SRCS})

TARGET_LINK_LIBRARIES(IOHelpCfgManager 
                        ACE
                        )

