
# SET(CMAKE_CXX_COMPILER g++)
# SET (CMAKE_CXX_FLAGS_DEBUG "-g -Wall")
# SET (CMAKE_BUILD_TYPE DEBUG)
ADD_DEFINITIONS(-DIONETCLTBOARD_EXPORTS)

AUX_SOURCE_DIRECTORY(. DIR_IONETCLTBOARD_SRCS)

MESSAGE(STATUS "IoNetCtlBoard source file: ${DIR_IONETCLTBOARD_SRCS}")

#保存位置
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)

ADD_LIBRARY(IoNetCtlBoard SHARED ${DIR_IONETCLTBOARD_SRCS})

TARGET_LINK_LIBRARIES(IoNetCtlBoard 
                        ACE 
                        )

