
# SET(CMAKE_CXX_COMPILER g++)
# SET (CMAKE_CXX_FLAGS_DEBUG "-g -Wall")
# SET (CMAKE_BUILD_TYPE DEBUG)
ADD_DEFINITIONS(-DIOSERIALBOARD_EXPORTS)

AUX_SOURCE_DIRECTORY(. DIR_IOSERIALBOARD_SRCS)

MESSAGE(STATUS "IoSerialBoard source file: ${DIR_IOSERIALBOARD_SRCS}")

#保存位置
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)

ADD_LIBRARY(IoSerialBoard SHARED ${DIR_IOSERIALBOARD_SRCS})

TARGET_LINK_LIBRARIES(IoSerialBoard                          
                        ACE 
                        )

