ADD_DEFINITIONS(-DDBBASECLASSES_EXPORTS)

AUX_SOURCE_DIRECTORY(. DIR_BASECLASSES_SRCS)

MESSAGE(STATUS "RTDBDriverFrame source file: ${DIR_BASECLASSES_SRCS}")

#保存位置
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)

ADD_LIBRARY(RTDBBaseClasses SHARED ${DIR_BASECLASSES_SRCS})

TARGET_LINK_LIBRARIES(RTDBBaseClasses RTDBCommon  ACE)
