
# SET(CMAKE_CXX_COMPILER g++)
# SET (CMAKE_CXX_FLAGS_DEBUG "-g -Wall")
# SET (CMAKE_BUILD_TYPE DEBUG)
ADD_DEFINITIONS(-DDBCOMMON_EXPORTS)

AUX_SOURCE_DIRECTORY(. DIR_RTDBCOMMON_SRCS)

MESSAGE(STATUS "RTDBCommon source file: ${DIR_RTDBCOMMON_SRCS}")

#保存位置
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)

ADD_LIBRARY(RTDBCommon SHARED ${DIR_RTDBCOMMON_SRCS})

TARGET_LINK_LIBRARIES(RTDBCommon 
                        TinyXml 
                        ACE 
                        )

