ADD_DEFINITIONS(-DIODRIVERFRAME_EXPORTS)

AUX_SOURCE_DIRECTORY(. DIR_RTDBDRIVERFRAME_SRCS)

MESSAGE(STATUS "RTDBDriverFrame source file: ${DIR_RTDBDRIVERFRAME_SRCS}")

#保存位置
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/bin)

ADD_LIBRARY(RTDBDriverFrame SHARED ${DIR_RTDBDRIVERFRAME_SRCS})

TARGET_LINK_LIBRARIES(RTDBDriverFrame 
                ACE 
                RTDBCommon 
                RTDBPlatform 
                RTDBBaseClasses)
