ADD_DEFINITIONS(-DIODRVSHEDULEMGR_EXPORTS)

AUX_SOURCE_DIRECTORY(. DIR_RTDBIODRVSHEDULEMGR_SRCS)

MESSAGE(STATUS "PlantformClass source file: ${DIR_RTDBIODRVSHEDULEMGR_SRCS}")

#保存位置
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/bin)

ADD_LIBRARY(RTDBDrvSheduleMgr SHARED ${DIR_RTDBIODRVSHEDULEMGR_SRCS})

TARGET_LINK_LIBRARIES(RTDBDrvSheduleMgr ACE RTDBCommon RTDBBaseClasses RTDBDriverFrame)

