
ADD_DEFINITIONS(-DIONODEMANAGER_EXPORTS)

AUX_SOURCE_DIRECTORY(. DIR_IONODEMANAGER_SRCS)

MESSAGE(STATUS "IONodeManager source file: ${DIR_IONODEMANAGER_SRCS}")

#保存位置
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/bin)

ADD_LIBRARY(RTDBNodeManager SHARED ${DIR_IONODEMANAGER_SRCS})

TARGET_LINK_LIBRARIES(RTDBNodeManager ACE RTDBCommon RTDBBaseClasses RTDBDriverFrame)
