ADD_DEFINITIONS(-DFEPPLATFORMCLASS_EXPORTS)

AUX_SOURCE_DIRECTORY(. DIR_FEPPLATFORMCLASS_SRCS)

MESSAGE(STATUS "PlantformClass source file: ${DIR_FEPPLATFORMCLASS_SRCS}")

#保存位置
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/bin)

ADD_LIBRARY(RTDBPlatform SHARED ${DIR_FEPPLATFORMCLASS_SRCS})

TARGET_LINK_LIBRARIES(RTDBPlatform ACE RTDBCommon)