ADD_DEFINITIONS(-DFEPMODBUSDRV_EXPORTS)

AUX_SOURCE_DIRECTORY(. DIR_FEPMODBUSDRV_SRCS)

MESSAGE(STATUS "FepModbus source file: ${DIR_FEPMODBUSDRV_SRCS}")

#保存位置
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin/Driver)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/bin)

ADD_LIBRARY(FepModbusDrv SHARED ${DIR_FEPMODBUSDRV_SRCS})

TARGET_LINK_LIBRARIES(FepModbusDrv ACE RTDBCommon RTDBBaseClasses RTDBDriverFrame IoDrvBoard)

